; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/common/extr_acfileio.c_AcIsFileBinary.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/common/extr_acfileio.c_AcIsFileBinary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcIsFileBinary(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* @FALSE, align 4
  store i32 %6, i32* %4, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @ftell(i32* %7)
  store i64 %8, i64* %5, align 8
  br label %9

9:                                                ; preds = %23, %1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @fread(i32* %3, i32 1, i32 1, i32* %10)
  %12 = icmp eq i32 %11, 1
  br i1 %12, label %13, label %24

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @isprint(i32 %14) #3
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @isspace(i32 %18) #3
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %17
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %4, align 4
  br label %25

23:                                               ; preds = %17, %13
  br label %9

24:                                               ; preds = %9
  br label %25

25:                                               ; preds = %24, %21
  %26 = load i32*, i32** %2, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i32, i32* @SEEK_SET, align 4
  %29 = call i32 @fseek(i32* %26, i64 %27, i32 %28)
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i64 @ftell(i32*) #1

declare dso_local i32 @fread(i32*, i32, i32, i32*) #1

; Function Attrs: nounwind readonly
declare dso_local i32 @isprint(i32) #2

; Function Attrs: nounwind readonly
declare dso_local i32 @isspace(i32) #2

declare dso_local i32 @fseek(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
